--- a/src/feature/CreateRoom/styles.scss
+++ b/src/feature/CreateRoom/styles.scss
@@ -36,4 +36,13 @@
         color: red;
         margin-bottom: 2px;
     }
+
+    &__success {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1000;
+    }
 }
