--- a/src/feature/register/components/RegisterTutor/styles.scss
+++ b/src/feature/register/components/RegisterTutor/styles.scss
@@ -43,9 +43,25 @@
             }
         }
 
+        &__profession {
+            padding: 8px 8px;
+            border: 1px solid;
+            border-radius: 4px;
+            margin-top: 2px;
+        }
+
         &__choose {
             display: flex;
             justify-content: space-between;
+            border: 1px solid;
+            border-radius: 8px;
+            margin-top: 1px;
+        }
+
+        &__error {
+            font-size: 12px;
+            color: red;
         }
     }
+
 }
