--- a/src/feature/register/styles.scss
+++ b/src/feature/register/styles.scss
@@ -1,8 +1,48 @@
 .register {
+    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0;
+
+    .register__form {
+        background-color: white;
+        width: 400px;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 40px;
+        &__control {
+            width: 100%;
+            margin-bottom: 8px;
+            display: flex;
+            flex-direction: column;
+            input{
+                width: 96%;
+                padding: 8px 8px;
+                
+                border-radius: 4px;
+                border: 1px solid;
+            }
+
+            button {
+                width: 100%;
+            }
+
+        }
+    }
+    &__success {
+        position: fixed;
+        background-color: rgb(237, 247, 237);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        display: none;
+    }
 }
 
 .active {
