--- a/src/feature/register/styles.scss
+++ b/src/feature/register/styles.scss
@@ -34,6 +34,10 @@
             }
 
         }
+        &__error {
+            font-size: 12px;
+            color: red;
+        }
     }
     &__success {
         position: fixed;
