--- a/src/feature/home/components/styles.scss
+++ b/src/feature/home/components/styles.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     &:hover{
         cursor: default;
         opacity: 1;
