--- a/src/feature/parent_room/styles.scss
+++ b/src/feature/parent_room/styles.scss
@@ -1,3 +1,7 @@
 .parentroom {
-    margin-top: 32px;
+    height: 100vh;
+    padding: 0px 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
