--- a/src/feature/register/components/RegisterParent/styles.scss
+++ b/src/feature/register/components/RegisterParent/styles.scss
@@ -45,5 +45,18 @@
             color: red;
         }
     }
-
+    &__loading {
+        display: none;
+        position: fixed;
+        align-items: center;
+        justify-content: center;
+        width: 100%; 
+        height: 100%; 
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+        z-index: 2; 
+    }
 }
