--- a/src/feature/components/Room/styles.scss
+++ b/src/feature/components/Room/styles.scss
@@ -1,45 +1,101 @@
-    .item__room {
-        height: 250px;
-        border-radius: 16px;
+$cWidth: 250px;
+$cHeight: $cWidth*1.35;
+
+.item__room {
+    width: $cWidth;
+    height: $cHeight;
+    background-color: white;
+    border-radius: 8px;
+    position: relative;
+    opacity: 0.8;
+    &:hover{
+        cursor: default;
+        opacity: 1;
+    }
+    & p {
+        text-align: center;
+        color: black;
+    }
+    &__button {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        opacity: 0.8;
-        &:hover{
-            cursor: default;
-            opacity: 1;
+        &__check {
+            background-color: transparent;
+            border: none;
+            color: #69ca43;
+            font-size: 26px;
         }
-        p {
-            text-align: center;
-            color: black;
-        }
-        &__button {
-            display: flex;
-            position: absolute;
-            bottom: 0;
-
-            &__check {
-                background-color: transparent;
-                border: none;
-                color: #69ca43;
-                font-size: 26px;
-            }
-            &__delete {
-                background-color: transparent;
-                border: none;
-                font-size: 35px;
-                color: #FD3131;
-            }
-        }
-        button {
-            opacity: 0.8;
-
-            &:hover {
-                cursor: pointer;
-                transform: scale(1.2);
-                opacity: 1;
-            }
+        &__delete {
+            background-color: transparent;
+            border: none;
+            font-size: 26px;
+            color: #FD3131;
         }
     }
+    button {
+        opacity: 0.8;
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.2);
+            opacity: 1;
+        }
+    }
+    &__thumbnail {
+        background-color: #9EA7E6;
+        position: absolute;
+        top: 12px;
+        left: 12px;
+        right: 12px;
+        height: 77%; 
+        border-radius: 8px;
+
+        & > div {
+            padding: 25px 16px;
+            & > h4 {
+                font-size: 25px;
+                margin: 0;
+                font-weight: 300;
+            }
+            & span {
+                font-size: 38px;
+                margin-left: 12px;
+            }
+        }
+
+        & > img {
+            position: absolute;
+            bottom: 16px;
+            left: 16px;
+            width: 120px;
+            height: 120px;
+        }
+    }
+    &__info {
+        position: absolute;
+        bottom: 10px;
+        left: 12px;
+        right: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        & h5{
+            margin: 0;
+            font-weight: 400;
+            font-size: 14px;
+        }
+        & span {
+            font-size: 14px;
+            color: #CECECE;
+        }
+        &__heart {
+            & svg {
+                color: white;
+                background-color: red;
+                padding: 4px;
+                border-radius: 50%;
+            }
+            background: transparent;
+            border: none;
+        }
+    }
+    
+}
