--- a/src/features/home/styles.scss
+++ b/src/features/home/styles.scss
@@ -25,7 +25,7 @@
     &__filter {
         position: fixed;
         left: 0px;
-        top: 40px;
+        top: 57px;
         bottom: 0px;
         width: 220px;
         background-color: white;
@@ -42,7 +42,7 @@
             background-color: transparent;
             border: none;
             position: fixed;
-            top: 100px;
+            top: 50%;
             left: 20px;
             &:hover {
                 cursor: pointer;
@@ -52,7 +52,7 @@
             background-color: transparent;
             border: none;
             position: fixed;
-            top: 60px;
+            top: 40%;
             left: 20px;
             &:hover {
                 cursor: pointer;
