--- a/src/features/header/components/styles.scss
+++ b/src/features/header/components/styles.scss
@@ -4,13 +4,16 @@
     &__user {
         display: flex;
         align-items: center;
-        color: white;
+        color: #404165;
         font-size: 12px;
         font-weight: 500;
+        svg {
+            margin-right: 4px;
+        }
         & > div {
             margin-left: 8px;
-            width: 32px;
-            height: 32px;
+            width: 36px;
+            height: 36px;
         }
         &:hover {
             cursor: pointer;
@@ -19,16 +22,18 @@
     }
     &__line {
         width: 1px;
-        height: 16px;
-        background-color: white;
-        margin-right: 16px;
+        height: 28px;
+        background-color: black;
+        margin-right: 12px;
+        margin-left: 8px;
         opacity: 0.6;
         border-radius: 20%;
     }
     &__dropdown {
-        margin-top: 4px;
+        margin-top:11px;
         display: none;
         position: absolute;
+        right: 4px;
         background-color: #f9f9f9;
         min-width: 120px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -37,11 +42,13 @@
         & > a {
             color: black;
             padding: 8px 12px;
+            font-weight: 400;
+            font-size: 14px;
             text-decoration: none;
             display: block;
             border-radius: 4px;
             &:hover {
-                background-color: #4385F5;
+                color: #ADB5E8;
             }
         }
     }
