--- a/src/features/home/components/FilterBar/styles.scss
+++ b/src/features/home/components/FilterBar/styles.scss
@@ -7,12 +7,16 @@
     input {
         width: 95%;
         padding: 4px;
-        border: 1px solid;
-        border-radius: 4px;
+        border: 1px solid #ccc;
+        border-radius: 64px;
+        &:focus-visible {
+            outline: none;
+        }
     }
 
     label {
         font-size: 12px;
+        font-weight: 600;
     }
 
     &__close {
@@ -44,5 +48,10 @@
             width: 32%;
         }
         
+    }
+
+    span {
+        font-weight: 400;
+        font-size: 12px;
     }
 }
