--- a/src/features/home/styles.scss
+++ b/src/features/home/styles.scss
@@ -16,8 +16,9 @@
         z-index: 998;
         position: fixed;
         top: 0px;
-        width: 100%;
-        height: 100%;
+        left: 0;
+        bottom: 0;
+        right: 0;
         background-color: rgba(0, 0, 0, 0.5);
         cursor: pointer;
         display: none;
