--- a/src/features/Home/components/FilterBar/styles.scss
+++ b/src/features/Home/components/FilterBar/styles.scss
@@ -2,15 +2,46 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
+    align-items: center;
+    width: 100%;
 
-    input {
-        width: 95%;
-        padding: 4px;
-        border: 1px solid #ccc;
-        border-radius: 64px;
-        &:focus-visible {
-            outline: none;
+    &__form {
+        width: 100%;
+        &__control {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 8px;
+            & select {
+                padding: 4px 8px;
+                border: 1px solid #ccc;
+                border-radius: 64px;
+            }
+        }
+        &__checkbox {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            & div {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+        &__price {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            & input {
+                width: 32%;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                padding: 4px;
+            }
+            & span {
+                width: 24px;
+                height: 2px;
+                background-color: #ccc;
+            }
         }
     }
 
