fix parent profile

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,24 @@ input:focus-visible {
 select:focus-visible {
     outline: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+    height: 4px;         
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
