--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -73,11 +73,11 @@ $cHeight: $cWidth*1.45;
         position: absolute;
         bottom: 6px;
         left: 8px;
-        right: 8px;
+        right: 4px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        & div {
+        &__price {
             display: flex;
             flex-direction: column;
         }
