--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -1,113 +1,78 @@
-$cWidth: 220px;
-$cHeight: $cWidth*1.45;
+$cWidth: 240px;
+$cHeight: $cWidth;
 
 .item__room {
     width: $cWidth;
     height: $cHeight;
-    background-color: #E9E8EB;
-    border: 0.5px solid rgba(0,0,0,0.1);
-    border-radius: 20px;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 4px;
     position: relative;
-    opacity: 0.8;
-    &:hover{
-        cursor: default;
-        opacity: 1;
-    }
+    padding: 16px;
+    
     & p {
         text-align: center;
         color: black;
     }
-    &__button {
-        display: flex;
-        &__check {
-            background-color: transparent;
-            border: none;
-            color: #69ca43;
-            font-size: 26px;
-        }
-        &__delete {
-            background-color: transparent;
-            border: none;
-            font-size: 26px;
-            color: #FD3131;
-        }
-    }
-    button {
-        opacity: 0.8;
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.2);
-            opacity: 1;
-        }
-    }
-    &__thumbnail {
+    &__clock {
         position: absolute;
         top: 4px;
-        left: 4px;
-        right: 4px;
-        height: 81%; 
-        border-radius: 20px;
-
-        & > div {
-            padding: 25px 16px;
-            & > h4 {
-                font-size: 25px;
-                margin: 0;
-                font-weight: 600;
-            }
-            & span {
-                font-size: 38px;
-                margin-left: 12px;
-            }
+        right: 8px;
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        font-style: italic;
+    }
+    &__thumbnail {
+        display: flex;
+        align-items:center;
+        margin-top: 20px;
+        & img {
+            width: 60px;
+            margin-right: 12px;
         }
-
-        & > img {
-            position: absolute;
-            bottom: 16px;
-            left: 16px;
-            width: 120px;
-            height: 120px;
+        & h3 {
+            font-size: 20px;
+            margin: 0;
+            margin-bottom: 4px;
+            letter-spacing: 2px;
+        }
+        & h5 {
+            margin: 0;
+            font-weight: 400;
         }
     }
     &__info {
-        position: absolute;
-        bottom: 6px;
-        left: 8px;
-        right: 4px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        &__price {
+        margin-top: 20px;
+        & div {
             display: flex;
-            flex-direction: column;
-        }
-        & h4{
-            margin: 0;
-            font-weight: 600;
+            align-items: center;
             font-size: 14px;
-        }
-        
-        & h5 {
-            margin: 0;
-            font-size: 12px;
-            font-weight: 500;
-            color: #6e6b6b;
-            & span {
-                color: black;
-                font-weight: 500;
-            }
-        }
-        &__heart {
+            font-weight: 400;
+            margin-bottom: 4px;
             & svg {
-                color: white;
-                background-color: #E22B4E;
-                padding: 6px;
-                font-size: 16px;
-                border-radius: 50%;
+                margin-right: 8px;
+                color: #0061ff;
             }
-            background: transparent;
-            border: none;
         }
     }
-    
+    &__avatar {
+        position: absolute;
+        top: 2px;
+        left: 8px;
+        display: flex;
+        font-size: 12px;
+        align-items: center;
+        font-style: italic;
+        & .MuiAvatar-root {
+            width: 20px;
+            height: 20px;
+            margin-right: 2px;
+        }
+    }
+    &__current {
+        color: #0061ff;
+        position: absolute;
+        font-size: 12px;
+        bottom: 48px;
+    }
 }
