--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -4,11 +4,13 @@ $cHeight: $cWidth;
 .item__room {
     width: $cWidth;
     height: $cHeight;
-    border: 1px solid rgba(0,0,0,0.1);
-    border-radius: 4px;
+    // border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 8px;
     position: relative;
     padding: 16px;
-    
+    background-color: white;
+    // box-shadow: 0 2px 4px 0 rgb(184 184 184 / 50%);
+    box-shadow: 0 2px 4px 0 #ccc;
     & p {
         text-align: center;
         color: black;
@@ -20,7 +22,6 @@ $cHeight: $cWidth;
         display: flex;
         align-items: center;
         font-size: 12px;
-        font-style: italic;
     }
     &__thumbnail {
         display: flex;
@@ -62,7 +63,6 @@ $cHeight: $cWidth;
         display: flex;
         font-size: 12px;
         align-items: center;
-        font-style: italic;
         & .MuiAvatar-root {
             width: 20px;
             height: 20px;
