--- a/src/features/auth/styles.scss
+++ b/src/features/auth/styles.scss
@@ -4,8 +4,8 @@
     left: 0;
     right: 0;
     bottom: 0;     
-    // background-image: url("https://i.ibb.co/PGwkBLZ/education-elementary-school-learning-and-people-concept-teacher-helping-school-kids-writing-test-in.jpg");
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
+    background-image: url("https://i.ibb.co/PGwkBLZ/education-elementary-school-learning-and-people-concept-teacher-helping-school-kids-writing-test-in.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
