--- a/src/features/Home/styles.scss
+++ b/src/features/Home/styles.scss
@@ -10,7 +10,7 @@
 }
 
 .home {
-    padding: 24px 52px;
+    padding: 24px 52px 66px 52px;
     margin-top: 56px;
     &__overlay {
         z-index: 800;
