--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -1,5 +1,5 @@
 $cWidth: 240px;
-$cHeight: $cWidth;
+$cHeight: 252px;
 
 .item__room {
     width: $cWidth;
@@ -78,4 +78,36 @@ $cHeight: $cWidth;
         font-size: 12px;
         bottom: 48px;
     }
+}
+
+
+@media (max-width: 769px){
+    .item__room {
+        width: 280px;
+        height: 280px;
+        &__thumbnail {
+            & img {
+                width: 66px;
+            }
+            & h3 {
+                font-size: 24px;
+            }
+            & h5 {
+                font-size: 16px;
+            }
+        }
+        &__info {
+            margin-top: 24px;
+            & div {
+                display: flex;
+                align-items: center;
+                font-size: 16px;
+                & svg {
+                    margin-right: 8px;
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+
 }
