--- a/src/features/Home/components/FilterBar/styles.scss
+++ b/src/features/Home/components/FilterBar/styles.scss
@@ -1,98 +1,26 @@
 .filter {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    justify-content: space-between;
+    padding: 0 12px;
+    
+    
+    &__field {
+        width: 180px;
 
-    &__form {
-        width: 100%;
-        &__control {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 8px;
-            & select {
-                padding: 4px 8px;
-                border: 1px solid #ccc;
-                border-radius: 64px;
-            }
-        }
-        &__checkbox {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            & div {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-        }
-        &__price {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            & input {
-                width: 32%;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                padding: 4px;
-            }
-            & span {
-                width: 24px;
-                height: 2px;
-                background-color: #ccc;
-            }
+        & > label {
+            font-size: 12px;
+            font-weight: 700;
         }
     }
+}
 
-    label {
-        font-size: 12px;
-        font-weight: 600;
-    }
-
-    &__close {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        font-size: 24px;
-        background-color: transparent;
-        border: none;
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
-
-    &__class {
-        display: flex;
-        justify-self: center;
+@media (max-width: 769px){
+    .filter {
+        flex-direction: column;
         align-items: center;
-        flex-flow: wrap;
-        &__item {
-            display: flex;
-            flex-direction: column;
-            justify-self: center;
-            align-items: center;
-            width: 16%;
+        padding: 0;
+        &__field {
+            width: 100%;
         }
-        &__special {
-            width: 32%;
-        }
-        
-    }
-
-    &__submit {
-        background-color: #5037EC;
-        color: white;
-        border: none;
-        border-radius: 64px;
-        padding: 8px 0px;
-        width: 100%;
-        margin-top: 8px;
-    }
-
-    span {
-        font-weight: 400;
-        font-size: 12px;
     }
 }
