--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -55,7 +55,7 @@ $cHeight: 252px;
             margin-bottom: 4px;
             & svg {
                 margin-right: 8px;
-                color: #0061ff;
+                color: #5472EA;
             }
         }
     }
@@ -73,7 +73,7 @@ $cHeight: 252px;
         }
     }
     &__current {
-        color: #0061ff;
+        color: #5472EA;
         position: absolute;
         font-size: 12px;
         bottom: 48px;
