--- a/src/components/Room/components/styles.scss
+++ b/src/components/Room/components/styles.scss
@@ -18,7 +18,7 @@
             }
         }
         &__apply {
-            background-color: #0061ff;
+            background-color: #5472EA;
             border: none;
             color: white;
         }
