--- a/src/components/location/styles.scss
+++ b/src/components/location/styles.scss
@@ -3,16 +3,17 @@
     .location {
         &__field {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 20px;
+            flex-direction: column;
+            margin: 12px 0px;
             label {
-                flex: 1;
-                text-align: end;
+                // flex: 1;
+                // text-align: end;
                 margin-right: 8px;
+                font-size: 14px;
+                font-weight: 600;
             }
             select {
-                flex: 4;
+                // flex: 4;
                 padding: 8px 12px;
                 border-radius: 4px;
                 border: 1px solid #ccc;
