--- a/src/features/Home/components/HomeBar/components/Catergories/styles.scss
+++ b/src/features/Home/components/HomeBar/components/Catergories/styles.scss
@@ -1,7 +1,7 @@
 .currentActive {
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid #5472EA;
     & h5 {
-        color: #000!important;
+        color: #5472EA!important;
     }
 }
