--- a/src/features/Home/components/HomeBar/styles.scss
+++ b/src/features/Home/components/HomeBar/styles.scss
@@ -26,10 +26,10 @@
         }
     }
 
-    &__filterbar {
-        // animation-name: animatefilter;
-        // animation-duration: 4s;
-    }
+    // &__filterbar {
+    //     // animation-name: animatefilter;
+    //     // animation-duration: 4s;
+    // }
 }
 
 @media (max-width: 769px){
