--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif; */
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
@@ -18,5 +18,8 @@ body {
       monospace;
   }
 
+  button:hover {
+    transform: scale(1.05);
+  }
 
   
