--- a/src/components/Room/components/styles.scss
+++ b/src/components/Room/components/styles.scss
@@ -39,6 +39,7 @@
             font-weight: 600;
             opacity: 0.8;
             color: black;
+            background: none;
             &:hover {
                 opacity: 1;
                 cursor: pointer;
