--- a/src/components/Room/components/styles.scss
+++ b/src/components/Room/components/styles.scss
@@ -11,14 +11,14 @@
             padding: 8px 4px;
             border-radius: 4px;
             font-weight: 600;
-            opacity: 0.8;
+            opacity: 0.9;
             &:hover {
                 opacity: 1;
                 cursor: pointer;
             }
         }
         &__apply {
-            background-color: #5472EA;
+            background-color: #0095FF;
             border: none;
             color: white;
         }
@@ -37,7 +37,7 @@
             padding: 8px 4px;
             border-radius: 4px;
             font-weight: 600;
-            opacity: 0.8;
+            opacity: 0.9;
             color: black;
         background-color: #F0F0F0;
             &:hover {
