--- a/src/features/Home/components/HomeBar/components/Catergories/styles.scss
+++ b/src/features/Home/components/HomeBar/components/Catergories/styles.scss
@@ -1,8 +1,8 @@
 .currentActive {
     background-color: white;
-    border: 1px solid #5472EA;
+    border: 1px solid #0095FF;
     & h5 {
-        color: #5472EA!important;
+        color: #0095FF!important;
         font-weight: 700!important;
     }
 }
