--- a/src/components/Room/styles.scss
+++ b/src/components/Room/styles.scss
@@ -55,7 +55,7 @@ $cHeight: 252px;
             margin-bottom: 4px;
             & svg {
                 margin-right: 8px;
-                color: #5472EA;
+                color: #0095FF;
                 font-size: 16px;
             }
         }
@@ -74,7 +74,7 @@ $cHeight: 252px;
         }
     }
     &__current {
-        color: #5472EA;
+        color: #0095FF;
         position: absolute;
         font-size: 12px;
         bottom: 48px;
