--- a/src/features/Home/components/HomeBar/components/Catergories/styles.scss
+++ b/src/features/Home/components/HomeBar/components/Catergories/styles.scss
@@ -1,8 +1,7 @@
 .currentActive {
-    background-color: white;
-    border: 1px solid #0095FF;
+    background-color: #3aa9f8;
     & h5 {
-        color: #0095FF!important;
+        color: white!important;
         font-weight: 700!important;
     }
 }
